--- a/0_tools/0_tools.html
+++ b/0_tools/0_tools.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Chapter 0: Some Useful Tools">
 
 <script id="pandoc-meta" type="application/json">
-{"output":{"pagedown::html_paged":{"self_contained":true,"css":["../../../style/my-style-page.css","default-fonts","default-page","default"],"number_sections":true}},"title":"Chapter 0: Some Useful Tools"}
+{"output":{"pagedown::html_paged":{"self_contained":true,"css":["../style/my-style-page.css","default-fonts","default-page","default"],"number_sections":true}},"title":"Chapter 0: Some Useful Tools"}
 </script>
 
 <title>Chapter 0: Some Useful Tools</title>
@@ -28811,11 +28811,20 @@ break-after: always;
 </div>
 <div id="tidyverse" class="section level1">
 <h1><span class="header-section-number">3</span> tidyverse</h1>
+<div id="readr" class="section level2">
+<h2><span class="header-section-number">3.1</span> <code>readr</code></h2>
+</div>
+<div id="dplyr" class="section level2">
+<h2><span class="header-section-number">3.2</span> <code>dplyr</code></h2>
+</div>
+<div id="tidyr" class="section level2">
+<h2><span class="header-section-number">3.3</span> <code>tidyr</code></h2>
+</div>
 <div id="additional-resources-2" class="section level2">
-<h2><span class="header-section-number">3.1</span> Additional resources</h2>
+<h2><span class="header-section-number">3.4</span> Additional resources</h2>
+<p><code>readr</code> (<a href="https://readr.tidyverse.org" class="uri">https://readr.tidyverse.org</a>)</p>
 <p><code>dplyr</code> (<a href="https://dplyr.tidyverse.org" class="uri">https://dplyr.tidyverse.org</a>)</p>
 <p><code>tidyr</code> (<a href="https://tidyr.tidyverse.org" class="uri">https://tidyr.tidyverse.org</a>)</p>
-<p><code>readr</code> (<a href="https://readr.tidyverse.org" class="uri">https://readr.tidyverse.org</a>)</p>
 </div>
 </div>
 <div id="rmarkdown" class="section level1">
