--- a/00_syllabus/syllabus.html
+++ b/00_syllabus/syllabus.html
@@ -19,7 +19,7 @@
 <meta name="description" content="STAT400: Statistical Computing">
 
 <script id="pandoc-meta" type="application/json">
-{"date":"<a href=\"http://stat400-csu.github.io\" class=\"uri\">http://stat400-csu.github.io</a>","output":{"pagedown::html_paged":{"self_contained":true,"css":["../../../style/my-style-page.css","default-fonts","default-page","default"],"number_sections":false}},"author":"Fall 2019","title":"STAT400: Statistical Computing"}
+{"date":"<a href=\"http://stat400-csu.github.io\" class=\"uri\">http://stat400-csu.github.io</a>","output":{"pagedown::html_paged":{"self_contained":true,"css":["../style/my-style-page.css","default-fonts","default-page","default"],"number_sections":false}},"author":"Fall 2019","title":"STAT400: Statistical Computing"}
 </script>
 
 <title>STAT400: Statistical Computing</title>
@@ -28389,7 +28389,8 @@ STAT 420 or concurrent enrollment.</p>
 </div>
 <div id="classwork-and-grading" class="section level2">
 <h2>Classwork and Grading</h2>
-<p><strong>Homework (40%)</strong> Homework will be assigned weekly. All homework assignments are due at the beginning of lecture on the due date. Each homework assignment will receive equal weight in the final grade and the two lowest homework assignment grades will be dropped. Late work is not accepted except in rare cases (see Documented emergencies below).</p>
+<p>All graded classwork must be fully <strong>reproducible</strong> by the instructor and TA. In other words, we need to be able to run your code and have it produce the product you turned in. If this is not the case, it will be reflected in the grading.</p>
+<p><strong>Homework (40%)</strong> Homework will be assigned weekly. All homework assignments are due at <strong>4pm on the due date</strong>. Each homework assignment will receive equal weight in the final grade and the two lowest homework assignment grades will be dropped. Late work is not accepted except in rare cases (see Documented emergencies below).</p>
 <p><strong>Exam (30%)</strong> There will be one midterm exam on October 24, 2019 in class.</p>
 <p><strong>Project (30%)</strong> There will be a final project that will consist of either</p>
 <ol style="list-style-type: decimal">
