updates to syllabus and day 1

--- a/00_syllabus/syllabus.html
+++ b/00_syllabus/syllabus.html
@@ -28389,7 +28389,7 @@ STAT 420 or concurrent enrollment.</p>
 </div>
 <div id="classwork-and-grading" class="section level2">
 <h2>Classwork and Grading</h2>
-<p>All graded classwork must be fully <strong>reproducible</strong> by the instructor and TA. In other words, we need to be able to run your code and have it produce the product you turned in. If this is not the case, it will be reflected in the grading.</p>
+<p>All graded classwork must be fully <strong>reproducible</strong> by the instructor and TA. In other words, we need to be able to run your code and have it produce the product you turned in. If this is not the case, it will be reflected in the grading. A copy of your homework will need to be turned in to <a href="https://canvas.colostate.edu" class="uri">https://canvas.colostate.edu</a> and the corresponding document used to generate your homework will need to exist on <a href="https://rstudio.cloud" class="uri">https://rstudio.cloud</a> for full credit.</p>
 <p><strong>Homework (40%)</strong> Homework will be assigned weekly. All homework assignments are due at <strong>4pm on the due date</strong>. Each homework assignment will receive equal weight in the final grade and the two lowest homework assignment grades will be dropped. Late work is not accepted except in rare cases (see Documented emergencies below).</p>
 <p><strong>Exam (30%)</strong> There will be one midterm exam on October 24, 2019 in class.</p>
 <p><strong>Project (30%)</strong> There will be a final project that will consist of either</p>
@@ -28449,7 +28449,7 @@ STAT 420 or concurrent enrollment.</p>
 </div>
 <div id="disclaimer" class="section level2">
 <h2>Disclaimer</h2>
-<p>I reserve the right to make amendments to the syllabus and the schedule throughout the semester. Any updates will be posted on the class website and announced via e-mail and in class.</p>
+<p>I reserve the right to make amendments to the syllabus and schedule throughout the semester. Updates will be posted on the class website and announced via e-mail and in class.</p>
 </div>
 </div>
 
