update office hours

--- a/00_syllabus/syllabus.html
+++ b/00_syllabus/syllabus.html
@@ -28365,7 +28365,7 @@ break-after: always;
 <p>Dr. Andee Kaplan<br />
 208 Statistics Building<br />
 Lectures: TR 9:30am - 10:45am in Military Sciences 115<br />
-Office Hours: TR 11:00am - 12:00pm in Statistics 208<br />
+Office Hours: W 10am - 11am, R 11am - 12pm in Statistics 208<br />
 <a href="mailto:andee.kaplan@colostate.edu" class="email">andee.kaplan@colostate.edu</a></p>
 <div id="course-objectives" class="section level2">
 <h2>Course Objectives</h2>
