getting ready for the week

--- a/2_probability/2_probability.html
+++ b/2_probability/2_probability.html
@@ -29005,7 +29005,7 @@ f(x_1, \dots, x_n) = \prod\limits_{i = 1}^n f_X(x_i).
 <h2><span class="header-section-number">9.1</span> Bias</h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-38" class="definition"><strong>Definition 9.1  </strong></span>Let <span class="math inline">\(X_1, \dots, X_n\)</span> be a random sample from a population, <span class="math inline">\(\theta\)</span> a parameter of interest, and $_n = <span class="math inline">\(T(X_1, \dots, X_n)\)</span> an estimator. Then the <em>bias</em> of <span class="math inline">\(\hat{\theta}_n\)</span> is defined as
+<span id="def:unnamed-chunk-38" class="definition"><strong>Definition 9.1  </strong></span>Let <span class="math inline">\(X_1, \dots, X_n\)</span> be a random sample from a population, <span class="math inline">\(\theta\)</span> a parameter of interest, and <span class="math inline">\(\hat{\theta}_n = T(X_1, \dots, X_n)\)</span> an estimator. Then the <em>bias</em> of <span class="math inline">\(\hat{\theta}_n\)</span> is defined as
 <span class="math display">\[
 bias(\hat{\theta}_n) = E[\hat{\theta}_n] - \theta.
 \]</span>
@@ -29013,7 +29013,7 @@ bias(\hat{\theta}_n) = E[\hat{\theta}_n] - \theta.
 
 
 <div class="definition">
-<span id="def:unnamed-chunk-39" class="definition"><strong>Definition 9.2  </strong></span>An <em>unbiased estimator</em> is defined to be an estimator $_n = <span class="math inline">\(T(X_1, \dots, X_n)\)</span> where
+<span id="def:unnamed-chunk-39" class="definition"><strong>Definition 9.2  </strong></span>An <em>unbiased estimator</em> is defined to be an estimator <span class="math inline">\(\hat{\theta}_n = T(X_1, \dots, X_n)\)</span> where
 </div>
 
 <p><br />
