--- a/6_mc/6_mc.html
+++ b/6_mc/6_mc.html
@@ -28941,6 +28941,7 @@ Let <span class="math inline">\(\phi(x)\)</span> be a density where <span class=
 </div>
 
 <p><span class="pagebreak"></span></p>
+<p><span class="pagebreak"></span></p>
 </div>
 <div id="choosing-phi" class="section level2">
 <h2><span class="header-section-number">2.3</span> Choosing <span class="math inline">\(\phi\)</span></h2>
@@ -28999,6 +29000,7 @@ Let <span class="math inline">\(\phi(x)\)</span> be a density where <span class=
 <div id="extended-example" class="section level2">
 <h2><span class="header-section-number">2.5</span> Extended Example</h2>
 <p>In this example, we will estimate <span class="math inline">\(\theta = \int_0^1 \frac{e^{-x}}{1 + x^2} dx\)</span> using MC integration and importance sampling with two different importance sampling distributions, <span class="math inline">\(\phi\)</span>.</p>
+<p><span class="pagebreak"></span></p>
 <p><span class="pagebreak"></span></p>
 <p><span class="pagebreak"></span></p>
 </div>
