add notes from thursday

--- a/00_admin/midterm_facts.html
+++ b/00_admin/midterm_facts.html
@@ -28633,7 +28633,7 @@ break-after: always;
 <p>To study:</p>
 <ul>
 <li>Go over your homework in detail. If you do not fully understand a problem, ask your peers and come to office hours.</li>
-<li>Re-read you class notes. Be sure you understand every example.</li>
+<li>Re-read your class notes. Be sure you understand every example.</li>
 <li>Create a good formula sheet. This will help you learn the material.</li>
 </ul>
 <p>Test Format:</p>
