add another your turn

--- a/6_mc/6_mc.html
+++ b/6_mc/6_mc.html
@@ -29003,6 +29003,13 @@ Let <span class="math inline">\(\phi(x)\)</span> be a density where <span class=
 <p><span class="pagebreak"></span></p>
 <p><span class="pagebreak"></span></p>
 <p><span class="pagebreak"></span></p>
+<p><span class="pagebreak"></span></p>
+<p><span class="yourturn"><strong>Your Turn</strong></span></p>
+<p>We want to use the following distribution for inference, where we know the shape, but not the full distributional form.</p>
+<p><span class="math display">\[
+f(x) = c\frac{\log(x)}{1 + x^2}, \quad x \in [1, \pi]
+\]</span>
+What do we need for this to be a valid pdf?</p>
 </div>
 </div>
 </div>
